# lastfm-to-sqlite

./: .gitignore  devenv.nix  pyproject.toml
lastfm/: __init__.py  cli.py  db_setup.py
plugins/: datetime.py  images.py  report_queries.py
static-files/: style.css
style/: index.scss
templates/: database.html
templates/pages/: reports.html
templates/pages/reports/: year.html  yearly.html
templates/pages/reports/year/: {year}.html
tests/: helpers.py  sample_album_response.json  sample_artist_response.json  sample_loves_dump.json  sample_recent_tracks_dump_with_nowplaying.json  sample_recent_tracks_no_image_dump.json  sample_recent_tracks_single_page_dump.json  test_db_setup.py  test_fetch_album.py  test_fetch_albums_to_update.py  test_fetch_artist.py  test_fetch_artists_to_update.py  test_fetch_loved_tracks.py  test_fetch_page.py  test_fetch_pages.py  test_lastfm.py  test_save_album_details.py  test_save_artist_details.py  test_save_artist_tags.py  test_save_similar_artists.py  test_saving.py
